@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2014-11-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>Magick++/tests/attributes.cpp: Add a simple test for
+Image::formatExpression().</li>
+<li>Magick++/lib/Image.cpp (formatExpression): Handle case where
+TranslateText() returns NULL.  Problem was reported by Dirk
+Lemstra..</li>
+</ul>
+</blockquote>
 <p>2014-10-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
