@@ -1,3 +1,12 @@
+2014-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++/tests/attributes.cpp: Add a simple test for
+	Image::formatExpression().
+
+	* Magick++/lib/Image.cpp (formatExpression): Handle case where
+	TranslateText() returns NULL.  Problem was reported by Dirk
+	Lemstra..
+
 2014-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Magick++/lib/Image.cpp (formatExpression): New method to format
